--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
          make push
       # Runs a set of commands using the runners shell
       - name: helm version
-        run: helm --version
+        run: helm version
   
