--- a/config.env
+++ b/config.env
@@ -2,4 +2,4 @@ IMAGE= my-first-image
 VERSION = a1
 DOCKER_PASSWORD = 44c3e917-4ed0-44b6-b444-8b8c1c39e823
 DOCKER_USERNAME = umadevi8702
-REPO_NAME = task
+REPO_NAME = dockrepo
