--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
          minikube start
       - name: helm install
         run:
-         helm upgrade dockimage benchtask/ --values benchtask/values.yaml
+         helm install dockimage benchtask/ --values benchtask/values.yaml
       # Runs a set of commands using the runners shell
       - name: get services
         run: kubectl get services
