--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,5 +41,5 @@ jobs:
         run: kubectl get services
             # Runs a set of commands using the runners shell
       - name: curl
-        run: curl http://localhost
+        run: curl http://localhost:80
           
