--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,7 @@ jobs:
       - name: get services
         run: kubectl get services
             # Runs a set of commands using the runners shell
+                  # Runs a set of commands using the runners shell
+      - name: Curl
+        run:  curl http://$(kubectl get svc example | awk 'FNR == 2 {print $3}')
+            # Runs a set of commands using the runners shell
