--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,6 @@ jobs:
         run: kubectl get services
             # Runs a set of commands using the runners shell
                   # Runs a set of commands using the runners shell
-      - name: Curl
-        run:  curl http://$(kubectl get svc example | awk 'FNR == 2 {print $3}')
+      - name: URL
+        run:  minikube service dockimage --url
             # Runs a set of commands using the runners shell
