--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,5 +48,5 @@ jobs:
             # Runs a set of commands using the runners shell
                   # Runs a set of commands using the runners shell
       - name: URL
-        run:  minikube service dockimage --url
+        run:  curl $(minikube service dockimage --url)  
             # Runs a set of commands using the runners shell
